# xbmc-joystick-client

./: CMakeLists.txt  README.org
include/: joystick.h  xbmcjoystick.h
src/: joystick.cpp  main.cpp  xbmcjoystick.cpp
